Add force calculation appendix

--- a/shortcuts.sty
+++ b/shortcuts.sty
@@ -24,6 +24,7 @@
 \newcommand{\fk}{K}
 \newcommand{\ki}{\langle k \rangle}
 \newcommand{\kii}{\langle k^2 \rangle}
+\newcommand{\kiii}{\langle k^3 \rangle}
 \newcommand{\sumk}{\sum\limits_k}
 \newcommand{\sumjk}{\sum\limits_{jk}}
 \newcommand{\ham}{\mathcal{H}\left(\mathbf{p},\mathbf{r}\right)}
@@ -34,3 +35,16 @@
 \newcommand{\dd}{\text{d}}
 \newcommand{\obj}{\Omega}
 \newcommand{\br}[2]{\left\{#1,#2\right\}}
+
+% Vectors
+\newcommand{\vr}{\mathbf{r}}
+\newcommand{\vri}{\mathbf{r_i}}
+\newcommand{\vrj}{\mathbf{r_j}}
+\newcommand{\vrk}{\mathbf{r_k}}
+\newcommand{\vrij}{\mathbf{r_{ij}}}
+\newcommand{\vrik}{\mathbf{r_{ik}}}
+\newcommand{\vhrij}{\boldsymbol{\hat{\mathbf{r}}_{\mathbf{ij}}}}
+\newcommand{\vhrik}{\boldsymbol{\hat{\mathbf{r}}_{\mathbf{ik}}}}
+\newcommand{\vfi}{\mathbf{F_i}}
+\newcommand{\vfj}{\mathbf{F_j}}
+\newcommand{\vfk}{\mathbf{F_k}}
