First draft of generalised networks chapter complete

--- a/references.bib
+++ b/references.bib
@@ -105,6 +105,16 @@ title = {{Neighbor network in a polydisperse hard-disk fluid: Degree distributio
 volume = {76},
 year = {2007}
 }
+@article{Brotsman2017,
+author = {Brotsman, Victor A and Ignateva, Daria V and Troyanov, Sergey I},
+doi = {10.1002/asia.201701011},
+file = {:Users/David/Documents/Work/DPhil/Papers/Brotsman{\_}et{\_}al-2017-Chemistry{\_}-{\_}An{\_}Asian{\_}Journal.pdf:pdf},
+journal = {Chem Asian J},
+pages = {2379--2382},
+title = {{Chlorination-promoted Transformation of Isolated Pentagon Rule C78 into Fused-pentagons- and Heptagons-containing Fullerenes}},
+volume = {12},
+year = {2017}
+}
 @article{Wales1997,
 author = {Wales, David J and Doye, Jonathan P K},
 doi = {10.1021/jp970984n},
@@ -193,6 +203,16 @@ pages = {5086--5094},
 title = {{Topological correlations in Benard-Marangoni convective structures}},
 volume = {54},
 year = {1996}
+}
+@article{Marcus1997,
+author = {Marcus, Andrew H and Rice, Stuart A},
+file = {:Users/David/Documents/Work/DPhil/Papers/PhysRevE.55.637.pdf:pdf},
+journal = {Phys. Rev. E},
+number = {1},
+pages = {637},
+title = {{Phase transitions in a confined quasi-two-dimensional colloid suspension}},
+volume = {55},
+year = {1997}
 }
 @article{Durand2011,
 abstract = {We propose an analytical model for the statistical mechanics of shuffled two-dimensional foams with moderate bubble size polydispersity. It predicts without any adjustable parameters the correlations between the number of sides n of the bubbles (topology) and their areas A (geometry) observed in experiments and numerical simulations of shuffled foams. Detailed statistics show that in shuffled cellular patterns n correlates better with √A (as claimed by Desch and Feltham) than with A (as claimed by Lewis and widely assumed in the literature). At the level of the whole foam, standard deviations $\Delta$n and $\Delta$A are in proportion. Possible applications include correlations of the detailed distributions of n and A, three-dimensional foams, and biological tissues.},
@@ -314,6 +334,19 @@ title = {{The Atomic Arrangement in Glass}},
 volume = {54},
 year = {1932}
 }
+@article{Fujita2016,
+author = {Fujita, Daishi and Ueda, Yoshihiro and Sato, Sota and Mizuno, Nobuhiro and Kumasaka, Takashi and Fujita, Makoto},
+doi = {10.1038/nature20771},
+file = {:Users/David/Documents/Work/DPhil/Papers/nature20771.pdf:pdf},
+issn = {0028-0836},
+journal = {Nature},
+pages = {563--566},
+publisher = {Nature Publishing Group},
+title = {{Self-assembly of tetravalent Goldberg polyhedra from 144 small components}},
+url = {http://dx.doi.org/10.1038/nature20771},
+volume = {540},
+year = {2016}
+}
 @article{Lewis1928,
 author = {Lewis, F. T.},
 doi = {10.1023/A:1012518317520},
@@ -325,6 +358,18 @@ pages = {341--376},
 title = {{The correlation between cell division and the shapes and sizes of prismatic cell in the epidermis of cucumis}},
 volume = {38},
 year = {1928}
+}
+@article{Tian2019,
+author = {Tian, Han-Rui and Chen, Miao-Miao and Wang, Kai and Chen, Zuo-Chang and Fu, Chao-Yong and Zhang, Qianyan and Li, Shu-Hui and Deng, Shun-Liu and Yao, Yang-Rong and Xie, Su-Yuan and Huang, Rong-Bin and Zheng, Lan-Sun},
+doi = {10.1021/jacs.9b01638},
+file = {:Users/David/Documents/Work/DPhil/Papers/jacs.9b01638.pdf:pdf},
+issn = {0002-7863},
+journal = {J. Am. Chem. Soc.},
+pages = {6651--6657},
+publisher = {American Chemical Society},
+title = {{An Unconventional Hydrofullerene C66H4 with Symmetric Heptagons Retrieved in Low-Pressure Combustion}},
+volume = {141},
+year = {2019}
 }
 @article{Rivier1985,
 author = {Rivier, N.},
@@ -507,6 +552,18 @@ title = {{Computer Modelling as a Technique in Materials Chemistry}},
 volume = {4},
 year = {1994}
 }
+@article{Guan2019,
+author = {Guan, Runnan and Jin, Fei and Yang, Shangfeng and Tamm, Nadezhda B and Troyanov, Sergey I},
+doi = {10.1021/acs.inorgchem.9b00144},
+file = {:Users/David/Documents/Work/DPhil/Papers/acs.inorgchem.9b00144.pdf:pdf},
+issn = {0020-1669},
+journal = {Inorg. Chem.},
+pages = {5393--5396},
+publisher = {American Chemical Society},
+title = {{Stable C92(26) and C92(38) as Well as Unstable C92(50) and C92(23) Isolated-Pentagon-Rule Isomers As Revealed by Chlorination of C92 Fullerene}},
+volume = {58},
+year = {2019}
+}
 @article{Hilhorst2006,
 abstract = {In planar cellular systems mn denotes the average sidedness of a cell neighbouring an n-sided cell. Aboav's empirical law states that nm(n) is linear in n. A downward curvature is nevertheless observed in the numerical nmn data of the random Voronoi froth. The exact large-n expansion of mn obtained in the present work, namely, m(n) = 4 + 3(pi/n)1/2 + (.) (.) (.) , explains this curvature. Its inverse square root dependence on n sets a new theoretical paradigm. Similar curved behaviour may be expected, and must indeed be looked for, in experimental data of sufficiently high resolution. We argue that it occurs, in particular, in diffusion-limited colloidal aggregation on the basis of recent simulation data due to Fernandez-Toledano et al (2005 Phys. Rev. E 71 041401) and earlier experimental results by Earnshaw and Robinson (1994 Phys. Rev. Lett. 72 3682).},
 author = {Hilhorst, H. J.},
@@ -547,6 +604,17 @@ title = {{The Arrangement of Cells in a Net. III}},
 volume = {17},
 year = {1984}
 }
+@article{Wang2017,
+author = {Wang, Zhi and Su, Hai-Feng and Tan, Yuan-Zhi and Schein, Stan and Lin, Shui-Chao and Liu, Wei and Wang, Shu-Ao and Wang, Wen-Guang and Tung, Chen-Ho and Sun, Di and Zheng, Lan-Sun},
+doi = {10.1073/pnas.1719225114},
+file = {:Users/David/Documents/Work/DPhil/Papers/12132.full.pdf:pdf},
+journal = {PNAS},
+number = {46},
+pages = {12132--12137},
+title = {{Assembly of silver Trigons into a buckyball-like Ag180 nanocage}},
+volume = {114},
+year = {2017}
+}
 @article{Shaikhutdinov2013,
 author = {Shaikhutdinov, Shamil and Freund, Hans-joachim},
 doi = {10.1002/cphc.201200826},
@@ -583,6 +651,13 @@ pages = {577--584},
 title = {{A note on the Aboav-Weaire law}},
 volume = {205},
 year = {1994}
+}
+@misc{osmap,
+author = {{Ordnance Survey}},
+publisher = {Ordnance Survey},
+title = {{Boundary-Line Data {\textcopyright} Crown copyright and database right 2018}},
+url = {https://www.ordnancesurvey.co.uk/business-and-government/products/boundaryline.html},
+year = {2018}
 }
 @article{Jain2018,
 author = {Jain, Sandeep K and Barkema, Gerard T},
@@ -830,6 +905,13 @@ title = {{Modeling vitreous silica bilayers}},
 volume = {87},
 year = {2013}
 }
+@misc{chmap,
+author = {{Federal Office of Topography}},
+publisher = {swisstopo},
+title = {{swissBOUNDARIES3D}},
+url = {https://shop.swisstopo.admin.ch/en/products/landscape/boundaries3D},
+year = {2019}
+}
 @article{Noever1992,
 author = {Noever, David A},
 file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-016666229280006N-main.pdf:pdf},
@@ -1041,6 +1123,13 @@ pages = {267--274},
 title = {{Monte Carlo Simulation}},
 volume = {32},
 year = {1992}
+}
+@misc{eumap,
+author = {Eurostat},
+publisher = {Eurostat},
+title = {{NUTS Geodata {\textcopyright} EuroGeographics for the administrative boundaries}},
+url = {https://ec.europa.eu/eurostat/web/gisco/geodata/reference-data/administrative-units-statistical-units/nuts},
+year = {2016}
 }
 @article{GELLATLY1982,
 author = {Gellatly, B. J. and Finney, J. L.},
@@ -1646,6 +1735,16 @@ title = {{Theory of the arrangement of cells in a network}},
 volume = {14},
 year = {1981}
 }
+@article{Kemnitz2018,
+author = {Brotsman, Victor A and Tamm, Nadezhda B and Markov, Vitaliy Yu and Ioffe, Ilya N and Goryunkov, Alexey A and Kemnitz, Erhard and Troyanov, Sergey I},
+doi = {10.1021/acs.inorgchem.8b00976},
+file = {:Users/David/Documents/Work/DPhil/Papers/acs.inorgchem.8b00976.pdf:pdf},
+journal = {Inorg. Chem.},
+pages = {8325--8331},
+title = {{Rebuilding C60 : Chlorination-Promoted Transformations of the Buckminsterfullerene into Pentagon-Fused C60 Derivatives}},
+volume = {57},
+year = {2018}
+}
 @article{Jensen1999,
 author = {Jensen, Pablo},
 file = {:Users/David/Documents/Work/DPhil/Papers/RevModPhys.71.1695.pdf:pdf},
@@ -1700,6 +1799,16 @@ publisher = {Elsevier Ltd},
 title = {{Theoretical approaches to graphene and graphene-based materials}},
 url = {http://dx.doi.org/10.1016/j.nantod.2012.04.006},
 volume = {7},
+year = {2012}
+}
+@article{Roth2012,
+author = {Roth, A E and Jones, C D and Durian, D J},
+doi = {10.1103/PhysRevE.86.021402},
+file = {:Users/David/Documents/Work/DPhil/Papers/PhysRevE.86.021402.pdf:pdf},
+journal = {Phys. Rev. E},
+pages = {021402},
+title = {{Coarsening of a two-dimensional foam on a dome}},
+volume = {86},
 year = {2012}
 }
 @article{Brutin2011,
