--- a/text/bilayers.tex
+++ b/text/bilayers.tex
@@ -80,6 +80,7 @@ A potential artefact of the high cooling rates is the effectively freezing in of
 In addition, as with the method above, such methods appears to systematically underestimate the \aw{} parameter, indicative of too little structural ordering.
 
 \section{Triangle Raft Method}
+\ref{s:triangleraft}
 
 The motivation of this work was to develop a construction algorithm to generate samples of silica bilayers which can capture the full \td{} network topology; both the ring distribution \textit{and} correlations. 
 The model should be able to explore all phases from crystalline to amorphous yet computationally efficient enough to produce configurations suitable for further high throughput calculations. 
