--- a/text/methods.tex
+++ b/text/methods.tex
@@ -366,6 +366,7 @@ This simply reflects the inherent balance of enthalpic \vs{} entropic  considera
 Figure \ref{fig:bsmc8} also demonstrates the importance of cooling a randomised lattice instead of heating a crystal, as some low energy defects may have a multi\--step formation with a high energy barrier.  
 
 \subsection{Potential Models}
+\ref{s:potentials}
 
 The nature of the bond switching method lends itself to the use of semi\--empirical potentials which have explicit stretching and angular neighbour lists.
 As such a popular choice for materials modelling is the Keating potential and modifications thereof \cite{Keating1966,Barkema2000}. 
@@ -419,6 +420,7 @@ Therefore geometry optimisation can be employed such that only the atoms in the 
 Typically this would extend to all atoms within five coordination shells of those directly involved in the switch move \cite{Mousseau2001}.
 
 \section{Hard Particle \mc}
+\ref{s:hardparticlemc}
 
 Hard particle Monte Carlo is one of the most well\--established computational methods in statistical physics.
 Through its simplicity it is able to provide insight into the fundamental behaviour of particle systems and simulations of increasing size are still performed this century \cite{Isobe2016,Bernard2009,Anderson2013,Isobe2015}.
