--- a/thesis.tex
+++ b/thesis.tex
@@ -203,7 +203,6 @@
 %%%%% CHAPTERS
 % Add or remove any chapters you'd like here, by file name (excluding '.tex'):
 \flushbottom
-%\include{text/chapter_template}
 \include{text/introduction}
 \include{text/theory}
 \include{text/methods}
@@ -217,7 +216,7 @@
 %    page that just says "Appendices" to signal the end of your main text.
 \startappendices
 % Add or remove any appendices you'd like here:
-\include{appendices/forces}
+`\include{appendices/forces}
 
 
 %%%%% REFERENCES
